--- a/package.json
+++ b/package.json
@@ -16,6 +16,20 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
+    "sass": "^1.56.0",
     "vite": "^3.2.0"
-  }
+  },
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EricksonRT/MyportfolioV2.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/EricksonRT/MyportfolioV2/issues"
+  },
+  "homepage": "https://github.com/EricksonRT/MyportfolioV2#readme",
+  "description": ""
 }
